[package]
name = "cooplan-definitions-io-lib"
version = "0.1.0"
edition = "2021"
description = "IO features for cooplan's definitions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cooplan-definitions-lib = "0.1.1"

serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"